--- a/index.html
+++ b/index.html
@@ -10,26 +10,30 @@
 <body>
 	<div class="container" id="containerFirst">
 		<ul class="scene" id="scene">	
-			
-			<li class="layer" data-depth="0.20">
-				<img class="imgMountain" src="img/background/pasto3.png" alt="">
-			</li>		
-			<li class="layer" data-depth="0.40">
-				<img class="imgMountain" src="img/background/pasto2.png" alt="">
-			</li>
-
-			<li class="layer" data-depth="0.60">
-				<img class="imgMountain" src="img/background/pasto1.png" alt="">
-			</li>
 			<li class="layer" data-depth="0.60">
 				<img class="imgCloud floating-left" src="img/background/nube1.png" alt="">
 			</li>
 			<li class="layer" data-depth="0.80">
 				<img class="imgCloud floating-right" src="img/background/nube2.png" alt="">
 			</li>
-			<li class="layer" data-depth="0.60">
-				<img class="imgTree" src="img/background/arbol.png" alt="">
+			<li class="layer" data-depth="0.50">
+				<img class="birds slideRight" src="img/background/aves.png" alt="">
 			</li>
+			<li class="layer" data-depth="0.20">
+				<img class="imgMountain" src="img/background/pasto3.png" alt="">
+			</li>	
+			<li class="layer" data-depth="0.40">
+				<img class="imgMountain" src="img/background/pasto2.png" alt="">
+			</li>
+			<li class="layer" data-depth="0.60">
+				<img class="imgTree hatch" src="img/background/arbol.png" alt="" >
+				<img alt="" class="fallingLeaves falling" width="100px">
+			</li>
+			<li class="layer" data-depth="0.60">
+				<img class="imgMountain" src="img/background/pasto1.png" alt="">
+			</li>
+			
+			<img src="img/menu/menu.png" id="menu">
 		</ul>
 	</div>
 	<div class="container">
