--- a/public/index.html
+++ b/public/index.html
@@ -202,7 +202,7 @@
 	</div>
 
 
-	<script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+	<script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
 	<script src="js/parallax.js"></script>
 	<script src="js/classie.js"></script>
 	<script src="js/modal.js"></script>
